--- a/index.html
+++ b/index.html
@@ -342,7 +342,11 @@
         .upgrade-button:hover {
             background: linear-gradient(135deg, #81ecec, var(--accent)); /* Инвертируем градиент на hover */
         }
-
+        .upgrade-button {
+    /* ... другие стили ... */
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3); /* Добавляем легкую тень */
+    /* ... остальные стили ... */
+}
         .upgrade-button:active {
             transform: scale(0.98);
         }
