--- a/index.html
+++ b/index.html
@@ -380,7 +380,44 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* Стили для раздела помощников */
+        /* Стили для модальных окон */
+        .modal {
+            display: none; /* Скрыто по умолчанию */
+            position: fixed; /* Остается на месте */
+            z-index: 1; /* Сидит поверх всего */
+            left: 0;
+            top: 0;
+            width: 100%; /* Полная ширина */
+            height: 100%; /* Полная высота */
+            overflow: auto; /* Включить прокрутку, если контент слишком большой */
+            background-color: rgba(0,0,0,0.4); /* Черный с прозрачностью */
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; /* 15% сверху и по центру */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Можно настроить ширину */
+            border-radius: 1rem;
+            position: relative;
+        }
+
+        .close-button {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close-button:hover,
+        .close-button:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Стили для раздела помощников внутри модального окна */
         .helpers-container {
             padding: 1rem;
         }
@@ -404,11 +441,13 @@
         .helper-name {
             font-weight: bold;
             margin-bottom: 0.2rem;
+            font-family: 'Rubik Mono One', sans-serif; /* Используем шрифт Rubik Mono One для названий */
         }
 
         .helper-description {
             color: var(--subtext);
             font-size: 0.85rem;
+            font-family: sans-serif; /* Используем стандартный шрифт sans-serif для описаний */
         }
 
         .helper-details {
@@ -449,10 +488,7 @@
         .helpers-list h3 {
             font-family: 'Rubik Mono One', sans-serif;
             margin-bottom: 0.5rem;
-        }
-
-        #helpersSection {
-            display: none; /* Скрываем раздел помощников по умолчанию */
+            text-align: center; /* Добавляем центрирование */
         }
     </style>
 </head>
@@ -504,17 +540,15 @@
                 <div id="shop" class="tab-page">
                     <div style="padding: 1rem;">
                         <h2 style="font-family: 'Rubik Mono One', sans-serif; margin-bottom: 1rem; text-align: center;">🛍 Shop</h2>
-                        <button class="upgrade-button" id="openHelpersShop">
-                            <i class="fa-solid fa-users"></i> Помощники
-                        </button>
-                        <div id="helpersSection" class="helpers-container">
-                            <div class="helpers-list">
-                                <h3>Наши помощники:</h3>
-                                <ul id="helpersListUI" style="list-style: none; padding: 0; margin-top: 0.5rem;">
-                                    </ul>
+                        <div style="display: flex; flex-direction: column; gap: 0.8rem;">
+                            <button class="upgrade-button" id="openHelpersModal">
+                                <i class="fa-solid fa-fish"></i> Наши помощники
+                            </button>
+                            <button class="upgrade-button" id="openSkinsModal">
+                                <i class="fa-solid fa-shirt"></i> Скины
+                            </button>
                             </div>
-                        </div>
-                        </div>
+                    </div>
                 </div>
 
                 <div id="leaderboard" class="tab-page">
@@ -542,6 +576,30 @@
                 <i class="fa-solid fa-ranking-star"></i><span>Top</span>
             </button>
         </nav>
+
+        <div id="helpersModal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <span class="close-button" id="closeHelpersModal">&times;</span>
+                <div class="helpers-container">
+                    <div class="helpers-list">
+                        <h3>Наши помощники:</h3>
+                        <ul id="helpersListUI" style="list-style: none; padding: 0; margin-top: 0.5rem;">
+                            </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="skinsModal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <span class="close-button" id="closeSkinsModal">&times;</span>
+                <div class="shark-gallery" style="margin-top: 1rem; justify-content: center;">
+                    <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Shark 1" data-skin="default" />
+                    <img src="https://sinobu1.github.io/shark-tapper/shark_skin1.png" alt="Gold Shark" data-skin="skin3" />
+                    <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard Shark" data-skin="skin2" />
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -584,15 +642,15 @@
             let lastPassiveIncomeTime = Date.now();
 
             const helpersData = {
-                'tinyFish': { name: 'Маленькая рыбка', description: 'Привлекает мелкие монетки.', cost: 1000, income: 1, upgradeMultiplier: 1.2 },
-                'seaAnemone': { name: 'Морской анемон', description: 'Фильтрует воду в поисках ценных блестяшек.', cost: 5000, income: 5, upgradeMultiplier: 1.3 },
-                'hermitCrab': { name: 'Краб-отшельник', description: 'Собирает упавшие монеты.', cost: 15000, income: 15, upgradeMultiplier: 1.4 },
-                'starfish': { name: 'Морская звезда', description: 'Ее сияние привлекает монетки.', cost: 50000, income: 50, upgradeMultiplier: 1.5 },
-                'jellyfish': { name: 'Медуза', description: 'Собирает затерянные сокровища.', cost: 150000, income: 150, upgradeMultiplier: 1.6 },
-                'babyTurtle': { name: 'Черепашонок', description: 'Приносит спрятанные богатства.', cost: 500000, income: 500, upgradeMultiplier: 1.7 },
-                'dolphinPup': { name: 'Дельфиненок', description: 'Быстро собирает разбросанные монеты.', cost: 1500000, income: 1500, upgradeMultiplier: 1.8 },
-                'smallOctopus': { name: 'Маленький осьминог', description: 'Находит затерянные монеты.', cost: 5000000, income: 5000, upgradeMultiplier: 1.9 },
-                'friendlySeal': { name: 'Дружелюбный тюлень', description: 'Любит приносить монетки.', cost: 15000000, income: 15000, upgradeMultiplier: 2.0 }
+                'tinyFish': { name: '🐟 Маленькая рыбка', description: 'Привлекает мелкие блестящие монетки.', cost: 1000, income: 1, upgradeMultiplier: 1.2 },
+                'seaAnemone': { name: '🌸 Морской анемон', description: 'Фильтрует воду, находя редкие монеты.', cost: 5000, income: 5, upgradeMultiplier: 1.3 },
+                'hermitCrab': { name: '🦀 Краб-отшельник', description: 'Собирает монеты, оставленные на дне.', cost: 15000, income: 15, upgradeMultiplier: 1.4 },
+                'starfish': { name: '⭐ Морская звезда', description: 'Ее свет манит любопытные монетки.', cost: 50000, income: 50, upgradeMultiplier: 1.5 },
+                'jellyfish': { name: '💧 Медуза', description: 'Плавно парит, собирая затерянные сокровища.', cost: 150000, income: 150, upgradeMultiplier: 1.6 },
+                'babyTurtle': { name: '🐢 Черепашонок', description: 'Не спеша приносит спрятанные богатства.', cost: 500000, income: 500, upgradeMultiplier: 1.7 },
+                'dolphinPup': { name: '🐬 Дельфиненок', description: 'Ловко собирает разбросанные монеты.', cost: 1500000, income: 1500, upgradeMultiplier: 1.8 },
+                'smallOctopus': { name: '🐙 Маленький осьминог', description: 'Использует щупальца, чтобы найти монеты.', cost: 5000000, income: 5000, upgradeMultiplier: 1.9 },
+                'friendlySeal': { name: '🦭 Дружелюбный тюлень', description: 'С радостью приносит найденные монетки.', cost: 15000000, income: 15000, upgradeMultiplier: 2.0 }
             };
 
             // --- Вспомогательные функции ---
@@ -707,36 +765,63 @@
                 const buyTapUpgradeButton = document.getElementById('buyTapUpgradeNav');
                 buyTapUpgradeButton.addEventListener('click', buyTapUpgrade);
 
-                const openHelpersShopButton = document.getElementById('openHelpersShop');
-                if (openHelpersShopButton) {
-                    openHelpersShopButton.addEventListener('click', function() {
-                        const helpersSection = document.getElementById('helpersSection');
-                        if (helpersSection) {
-                            helpersSection.style.display = 'block';
-                        }
+                const openHelpersModalButton = document.getElementById('openHelpersModal');
+                const closeHelpersModalButton = document.getElementById('closeHelpersModal');
+                const helpersModal = document.getElementById('helpersModal');
+
+                const openSkinsModalButton = document.getElementById('openSkinsModal');
+                const closeSkinsModalButton = document.getElementById('closeSkinsModal');
+                const skinsModal = document.getElementById('skinsModal');
+
+                if (openHelpersModalButton) {
+                    openHelpersModalButton.addEventListener('click', () => {
+                        helpersModal.style.display = "block";
+                        displayHelpers(); // Загружаем список помощников при открытии модального окна
                     });
                 }
 
-                document.querySelectorAll('.shark-gallery img').forEach(img => {
-                    img.addEventListener('click', function() {
-                        setSkin(this.dataset.skin);
+                if (closeHelpersModalButton) {
+                    closeHelpersModalButton.addEventListener('click', () => {
+                        helpersModal.style.display = "none";
                     });
+                }
+
+                if (openSkinsModalButton) {
+                    openSkinsModalButton.addEventListener('click', () => {
+                        skinsModal.style.display = "block";
+                    });
+                }
+
+                if (closeSkinsModalButton) {
+                    closeSkinsModalButton.addEventListener('click', () => {
+                        skinsModal.style.display = "none";
+                    });
+                }
+
+                // Закрытие модального окна при клике вне его
+                window.addEventListener('click', (event) => {
+                    if (event.target === helpersModal) {
+                        helpersModal.style.display = "none";
+                    }
+                    if (event.target === skinsModal) {
+                        skinsModal.style.display = "none";
+                    }
                 });
+
+                // Обработчики для скинов теперь будут внутри модального окна
+                const skinsGallery = document.getElementById('skinsModal');
+                if (skinsGallery) {
+                    skinsGallery.querySelectorAll('.shark-gallery img').forEach(img => {
+                        img.addEventListener('click', function() {
+                            setSkin(this.dataset.skin);
+                            skinsModal.style.display = "none"; // Закрываем модальное окно после выбора скина
+                        });
+                    });
+                }
 
                 document.querySelectorAll('nav button').forEach(btn => {
                     btn.addEventListener('click', function() {
                         showTab(this.dataset.tab);
-                        if (this.dataset.tab === 'shop') {
-                            const helpersSection = document.getElementById('helpersSection');
-                            if (helpersSection) {
-                                helpersSection.style.display = 'block'; // Показываем раздел помощников при открытии вкладки "Магазин"
-                            }
-                        } else {
-                            const helpersSection = document.getElementById('helpersSection');
-                            if (helpersSection) {
-                                helpersSection.style.display = 'none'; // Скрываем раздел помощников при переходе на другие вкладки
-                            }
-                        }
                     });
                 });
             }
@@ -831,14 +916,17 @@
                 }
 
                 // Обновляем состояние кнопок покупки помощников
-                document.querySelectorAll('.buy-button').forEach(button => {
-                    const helperId = button.dataset.helperId;
-                    if (userData.tokens < helpersData[helperId].cost) {
-                        button.classList.add('disabled');
-                    } else {
-                        button.classList.remove('disabled');
-                    }
-                });
+                const helpersListUI = document.getElementById('helpersListUI');
+                if (helpersListUI) {
+                    helpersListUI.querySelectorAll('.buy-button').forEach(button => {
+                        const helperId = button.dataset.helperId;
+                        if (userData.tokens < helpersData[helperId].cost) {
+                            button.classList.add('disabled');
+                        } else {
+                            button.classList.remove('disabled');
+                        }
+                    });
+                }
             }
 
             function showTab(tabId) {
@@ -852,17 +940,6 @@
 
                 if (tabId === 'leaderboard') {
                     loadLeaderboard();
-                }
-                if (tabId === 'shop') {
-                    const helpersSection = document.getElementById('helpersSection');
-                    if (helpersSection) {
-                        helpersSection.style.display = 'block';
-                    }
-                } else {
-                    const helpersSection = document.getElementById('helpersSection');
-                    if (helpersSection) {
-                        helpersSection.style.display = 'none';
-                    }
                 }
             }
 
@@ -1104,6 +1181,49 @@
                 const tapUpgradeCostElementNav = document.getElementById('tapUpgradeCostNav');
                 if (tapUpgradeCostElementNav) tapUpgradeCostElementNav.textContent = tapUpgradeCost;
             }
+
+            const openHelpersModalButton = document.getElementById('openHelpersModal');
+            const closeHelpersModalButton = document.getElementById('closeHelpersModal');
+            const helpersModal = document.getElementById('helpersModal');
+
+            const openSkinsModalButton = document.getElementById('openSkinsModal');
+            const closeSkinsModalButton = document.getElementById('closeSkinsModal');
+            const skinsModal = document.getElementById('skinsModal');
+
+            if (openHelpersModalButton) {
+                openHelpersModalButton.addEventListener('click', () => {
+                    helpersModal.style.display = "block";
+                    displayHelpers(); // Загружаем список помощников при открытии модального окна
+                });
+            }
+
+            if (closeHelpersModalButton) {
+                closeHelpersModalButton.addEventListener('click', () => {
+                    helpersModal.style.display = "none";
+                });
+            }
+
+            if (openSkinsModalButton) {
+                openSkinsModalButton.addEventListener('click', () => {
+                    skinsModal.style.display = "block";
+                });
+            }
+
+            if (closeSkinsModalButton) {
+                closeSkinsModalButton.addEventListener('click', () => {
+                    skinsModal.style.display = "none";
+                });
+            }
+
+            // Закрытие модального окна при клике вне его
+            window.addEventListener('click', (event) => {
+                if (event.target === helpersModal) {
+                    helpersModal.style.display = "none";
+                }
+                if (event.target === skinsModal) {
+                    skinsModal.style.display = "none";
+                }
+            });
 
             // --- Запуск приложения ---
             init();
